--- a/app/src/main/res/layout/activity_nire_kontua.xml
+++ b/app/src/main/res/layout/activity_nire_kontua.xml
@@ -8,6 +8,29 @@
 
 
     <!-- HEADER -->
+
+    <Button
+        android:id="@+id/nrkntBtnUpdateIzena"
+        android:layout_width="135sp"
+        android:layout_height="62sp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/editatu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/IdBtnDelete"
+        app:layout_constraintHorizontal_bias="0.477"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/IdBtnDelete"
+        android:layout_width="135sp"
+        android:layout_height="62sp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/ezabatu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:id="@+id/loginBanner"
         android:layout_width="411sp"
@@ -55,6 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginBanner" />
 
     <!-- Izena EditText -->
+
     <EditText
         android:id="@+id/nrkntEditIzena"
         android:layout_width="150sp"
@@ -77,6 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginBanner" />
 
     <!-- NAN EditText -->
+
     <EditText
         android:id="@+id/nrkntEditNan"
         android:layout_width="150sp"
@@ -90,6 +115,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <!-- TextView "Abizenak" -->
+
     <TextView
         android:id="@+id/nrkntTxtAbizenak"
         android:layout_width="wrap_content"
@@ -221,6 +247,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nrkntEditPasahitza" />
     <!-- Erabiltzaile mota EditText (textPassword) -->
+
     <EditText
         android:id="@+id/nrkntEditErbltzMta"
         android:layout_width="211dp"
@@ -240,7 +267,8 @@
         android:id="@+id/idLayOpzioak"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="265sp"
@@ -378,9 +406,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent" />
+
         </LinearLayout>
 
     </LinearLayout>
+
     <!-- inside header fin -->
     <!-- header fin -->
 
