--- a/app/src/main/res/layout/activity_nire_kontua.xml
+++ b/app/src/main/res/layout/activity_nire_kontua.xml
@@ -9,28 +9,6 @@
 
     <!-- HEADER -->
 
-    <Button
-        android:id="@+id/nrkntBtnUpdateIzena"
-        android:layout_width="135sp"
-        android:layout_height="62sp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/editatu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/IdBtnDelete"
-        app:layout_constraintHorizontal_bias="0.477"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/IdBtnDelete"
-        android:layout_width="135sp"
-        android:layout_height="62sp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/ezabatu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <LinearLayout
         android:id="@+id/loginBanner"
         android:layout_width="411sp"
@@ -199,6 +177,7 @@
         app:layout_constraintTop_toBottomOf="@+id/nrkntEditMugikorra" />
 
     <!-- Pasahitza EditText (textPassword) -->
+
     <EditText
         android:id="@+id/nrkntEditPasahitza"
         android:layout_width="150sp"
@@ -263,12 +242,40 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <!-- INSIDE HEADER -->
+
+    <Button
+        android:id="@+id/nrkntBtnUpdateIzena"
+        android:layout_width="135sp"
+        android:layout_height="62sp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/editatu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/IdBtnDelete"
+        app:layout_constraintHorizontal_bias="0.405"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nrkntEditErbltzMta"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/IdBtnDelete"
+        android:layout_width="135sp"
+        android:layout_height="62sp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/ezabatu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nrkntEditErbltzMta"
+        app:layout_constraintVertical_bias="1.0" />
+
     <LinearLayout
         android:id="@+id/idLayOpzioak"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:visibility="gone">
+        android:visibility="visible"
+        tools:visibility="visible">
 
         <LinearLayout
             android:layout_width="265sp"
